<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planner_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="francesco00masin@gmail.com">francesco-masin</maintainer>
  <license>TODO: License declaration</license>

  <depend>numpy</depend>
  <depend>matplotlib</depend>
  <depend>tf_transformations</depend>
  <depend>cv2</depend>
  <depend>PIL</depend>
  <depend>skimage</depend>
  <depend>enum</depend>
  <depend>typing</depend>
  <depend>pathlib</depend>
  <depend>yaml</depend>
  <depend>os</depend>
  <depend>queue</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
